[metadata]
name = ParUtils
version = attr: parutils.__VERSION__
author = Paul Arnaud
author_email = paularnaud2@gmail.com
description = This package contains a bunch of Python utils developed for Support, Test and Automation IT Engineers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paularnaud2/ParUtils
project_urls =
    Bug Tracker = https://github.com/paularnaud2/ParUtils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

